--- a/index.html
+++ b/index.html
@@ -2,176 +2,112 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anonymous Relationship Quiz 3.0</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f2f2f2;
-      color: #333;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      background: #fff;
-      padding: 20px;
-      margin-top: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    h1, h2 {
-      color: #444;
-    }
-    .hidden {
-      display: none;
-    }
-    .question {
-      margin-bottom: 20px;
-    }
-    input[type="text"], textarea, select {
-      width: 90%;
-      padding: 10px;
-      margin-top: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    button {
-      padding: 10px 20px;
-      background: #007BFF;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-    button:hover {
-      background: #0056b3;
-    }
-    .progress {
-      height: 20px;
-      background: #ddd;
-      border-radius: 10px;
-      margin: 20px 0;
-      overflow: hidden;
-    }
-    .progress-bar {
-      height: 100%;
-      width: 0;
-      background: #28a745;
-      transition: width 0.3s;
-    }
-    .sponsors {
-      margin: 20px 0;
-    }
-    .sponsors img {
-      height: 40px;
-      margin: 0 10px;
-      vertical-align: middle;
-    }
+    body { font-family: Arial, sans-serif; background: #f0f0f0; margin: 0; padding: 0; }
+    .page { display: none; padding: 20px; text-align: center; }
+    .active { display: block; }
+    .container { background: #fff; max-width: 700px; margin: 30px auto; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);}
+    h1, h2, h3 { color: #333; }
+    button { margin-top: 20px; padding: 10px 20px; font-size: 16px; cursor: pointer; border: none; border-radius: 8px; background: #4CAF50; color: white; }
+    button:hover { background: #45a049; }
+    .sponsors { margin-top: 20px; }
+    .sponsors img { height: 40px; margin: 0 10px; vertical-align: middle; border-radius: 6px; }
+    input, textarea, select { width: 90%; padding: 10px; margin-top: 15px; border: 1px solid #ccc; border-radius: 8px; }
+    textarea { resize: vertical; min-height: 80px; }
   </style>
 </head>
 <body>
 
-<div class="container" id="quiz-container">
-  <!-- Landing Page -->
-  <div class="page" id="page-1">
-    <h1>(Logo Here) Presents</h1>
-    <h2>The Anonymous Relationship Quiz 3.0</h2>
+<div class="container">
+
+  <!-- Landing -->
+  <div class="page active" id="landing">
+    <h1>Anonymous Relationship Quiz 3.0</h1>
+    <p>Welcome to the most daring and anonymous relationship quiz.</p>
+    <button onclick="nextPage('rules')">Continue</button>
     <div class="sponsors">
-      <p>Powered By:</p>
-      <img src="WhatsApp Image 2025-09-13 at 10.49.05 PM (1).jpeg" alt="Sponsor1">
-      <img src="WhatsApp Image 2025-09-13 at 10.49.04 PM (1).jpeg" alt="Sponsor2">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.05 PM (1).jpeg" alt="Sponsor 1">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.04 PM (1).jpeg" alt="Sponsor 2">
     </div>
-    <p>Complete the Quiz Challenge, Answer all questions, Follow The Rules and Win Rewards!</p>
-    <button onclick="nextPage()">Continue</button>
   </div>
 
-  <!-- Rules Page -->
-  <div class="page hidden" id="page-2">
-    <h2>Rules & Details</h2>
-    <p>1. Your Name, Identity or any details is Not Revealed</p>
-    <p>2. You're Anonymous so answer freely</p>
-    <p>3. Do not answer with just "Yes " or " No"</p>
-    <p>4. Too Short Answer Sets may be rejected</p>
-    <p>5. We urge and Request Honesty while answering</p>
-    <p>6. This will help us continue the series</p>
-    <p>7. Decision for rewards distribution will be final</p>
-    <button onclick="nextPage()">Continue</button>
+  <!-- Rules -->
+  <div class="page" id="rules">
+    <h2>Rules</h2>
+    <ul style="text-align:left; display:inline-block;">
+      <li>Be honest while answering.</li>
+      <li>Your answers will remain anonymous.</li>
+      <li>Minimum 10 words for descriptive answers.</li>
+    </ul>
+    <button onclick="nextPage('disclaimer')">Continue</button>
+    <div class="sponsors">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.05 PM (1).jpeg" alt="Sponsor 1">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.04 PM (1).jpeg" alt="Sponsor 2">
+    </div>
   </div>
 
-  <!-- Credits Page -->
-  <div class="page hidden" id="page-3">
-    <h2>Credits</h2>
-    <p>Created By : Aman, Tushar Tg, Sagnik, Aashik K & Sammy</p>
-    <p>Creative : Aashik K, Sagnik & Subham</p>
-    <p>Special Thanks : Indrajit</p>
-    <p>Business Co-ordinator : Raj & Nitesh Yadav</p>
-    <p>Web Hosting : Sagnik</p>
-    <button onclick="nextPage()">Continue</button>
-  </div>
-
-  <!-- Disclaimer Page -->
-  <div class="page hidden" id="page-4">
+  <!-- Disclaimer -->
+  <div class="page" id="disclaimer">
     <h2>Disclaimer</h2>
-    <p>This Quiz will contain Explicit and Sexual Content. Your data will be collected anonymously for survey purposes.</p>
-    <input type="checkbox" id="agree"> I agree<br>
-    <button onclick="checkDisclaimer()">Continue</button>
+    <p>This quiz is for fun and awareness only. We do not store your identity. Proceed only if you are comfortable.</p>
+    <button onclick="nextPage('userinfo')">Continue</button>
+    <div class="sponsors">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.05 PM (1).jpeg" alt="Sponsor 1">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.04 PM (1).jpeg" alt="Sponsor 2">
+    </div>
   </div>
 
-  <!-- Gender & Age Page -->
-  <div class="page hidden" id="page-5">
-    <h2>Enter Details</h2>
-    <label>Gender:</label><br>
-    <select id="gender" required>
-      <option value="">Select</option>
-      <option value="Male">Male</option>
-      <option value="Female">Female</option>
-    </select><br><br>
-    <label>Age:</label><br>
-    <input type="text" id="age" placeholder="Enter Age" required><br>
-    <button onclick="nextPage()">Continue</button>
+  <!-- User Info -->
+  <div class="page" id="userinfo">
+    <h2>Your Details</h2>
+    <form id="quizForm" action="https://formsubmit.co/sagnikbhattacharjee8@gmail.com" method="POST">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_template" value="table">
+      <input type="hidden" id="uid" name="Unique ID">
+      <input type="number" name="Age" placeholder="Enter your age" required>
+      <select name="Gender" required>
+        <option value="" disabled selected>Select Gender</option>
+        <option value="Male">Male</option>
+        <option value="Female">Female</option>
+      </select>
+      <button type="button" onclick="startQuiz()">Start Quiz</button>
+    </form>
+    <div class="sponsors">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.05 PM (1).jpeg" alt="Sponsor 1">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.04 PM (1).jpeg" alt="Sponsor 2">
+    </div>
   </div>
 
   <!-- Questions -->
-  <form id="quiz-form" action="https://formsubmit.co/sagnikbhattacharjee8@gmail.com" method="POST">
-    <div class="page hidden" id="questions-page">
-      <h2>Questions</h2>
-      <div class="progress"><div class="progress-bar" id="progress-bar"></div></div>
-      <div id="question-container"></div>
-      <button type="button" onclick="nextQuestion()">Next</button>
+  <div class="page" id="questions">
+    <h2 id="qText"></h2>
+    <div id="answerBox"></div>
+    <button onclick="nextQuestion()">Next</button>
+    <div class="sponsors">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.05 PM (1).jpeg" alt="Sponsor 1">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.04 PM (1).jpeg" alt="Sponsor 2">
     </div>
+  </div>
 
-    <!-- UID Page -->
-    <div class="page hidden" id="uid-page">
-      <h2>Your Unique ID</h2>
-      <p id="unique-id"></p>
-      <p>Take a Screenshot of this screen and Share it to the sender, To Receive your Reward.</p>
-      <button onclick="nextPage()">Continue</button>
+  <!-- Credits -->
+  <div class="page" id="credits">
+    <h2>Credits</h2>
+    <p>Thanks for completing Quiz 3.0. Your responses will be submitted anonymously.</p>
+    <button onclick="document.getElementById('quizForm').submit()">Submit</button>
+    <div class="sponsors">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.05 PM (1).jpeg" alt="Sponsor 1">
+      <img src="WhatsApp Image 2025-09-13 at 10.49.04 PM (1).jpeg" alt="Sponsor 2">
     </div>
+  </div>
 
-    <!-- Thank You Page -->
-    <div class="page hidden" id="thankyou-page">
-      <h2>Thank You!</h2>
-      <p>Your responses have been recorded.</p>
-      <p>Credits:</p>
-      <p>Created By : Aman, Tushar Tg, Sagnik, Aashik K & Sammy</p>
-      <p>Creative : Aashik K, Sagnik & Subham</p>
-      <p>Special Thanks : Indrajit</p>
-      <p>Business Co-ordinator : Raj & Nitesh Yadav</p>
-      <p>Web Hosting : Sagnik</p>
-      <button type="submit">Finish</button>
-    </div>
-  </form>
 </div>
 
 <script>
-  let currentPage = 1;
+  const pages = ["landing","rules","disclaimer","userinfo","questions","credits"];
+  let currentPage = 0;
   let currentQuestion = 0;
 
-  const pages = document.querySelectorAll('.page');
   const questions = [
 `1. Are you a Virgin ? - Yes / No Button`,
 `2. Your Body Count ?`,
@@ -207,50 +143,55 @@
 `32. Imagine your Partner tied you down with vibrator toys or sybian left you for a shaking org*sm - How would you react ?`,
 `33. Explain your Fantasy and how you aim to achieve it if Money is not a problem.`,
 `34. Name the celebrity you're interested or you can have s*x with.`,
-`35. Do you agree? if not then Debate the points - S*x before marriage : - It breaks the sanctity of marriage. - It lacks commitment and responsibility. - It may cause emotional pain and regret. - It is seen as morally wrong in many cultures. - It can lead to health and social risks. - Waiting builds trust and respect in marriage.`
+`35. Do you agree? if not then Debate the points - S*x before marriage : 
+- It breaks the sanctity of marriage.
+- It lacks commitment and responsibility.
+- It may cause emotional pain and regret.
+- It is seen as morally wrong in many cultures.
+- It can lead to health and social risks.
+- Waiting builds trust and respect in marriage.`
   ];
 
-  function nextPage() {
-    pages[currentPage - 1].classList.add('hidden');
-    currentPage++;
-    pages[currentPage - 1].classList.remove('hidden');
+  function nextPage(pageId) {
+    document.getElementById(pages[currentPage]).classList.remove("active");
+    currentPage = pages.indexOf(pageId);
+    document.getElementById(pageId).classList.add("active");
   }
 
-  function checkDisclaimer() {
-    if (document.getElementById('agree').checked) {
-      nextPage();
-    } else {
-      alert("Please agree to continue.");
-    }
+  function startQuiz() {
+    document.getElementById("uid").value = "UID-" + Math.floor(Math.random()*1000000);
+    nextPage('questions');
+    showQuestion();
   }
 
-  function loadQuestion() {
-    if (currentQuestion < questions.length) {
-      let qText = questions[currentQuestion];
-      document.getElementById('question-container').innerHTML =
-        `<div class="question"><p>${qText}</p>
-        <textarea name="q${currentQuestion+1}" required></textarea></div>`;
-      document.getElementById('progress-bar').style.width =
-        ((currentQuestion+1)/questions.length)*100 + "%";
+  function showQuestion() {
+    if(currentQuestion < questions.length) {
+      document.getElementById("qText").innerText = questions[currentQuestion];
+      let qNum = currentQuestion+1;
+      if(questions[currentQuestion].includes("Yes / No Button")) {
+        document.getElementById("answerBox").innerHTML = `
+          <label><input type="radio" name="Q${qNum}" value="Yes" required> Yes</label>
+          <label><input type="radio" name="Q${qNum}" value="No" required> No</label>`;
+      } else {
+        document.getElementById("answerBox").innerHTML = `<textarea name="Q${qNum}" required></textarea>`;
+      }
     } else {
-      pages[currentPage - 1].classList.add('hidden');
-      currentPage++;
-      pages[currentPage - 1].classList.remove('hidden');
-      document.getElementById('unique-id').innerText =
-        "UID-" + Math.random().toString(36).substr(2,9).toUpperCase();
+      nextPage('credits');
     }
   }
 
   function nextQuestion() {
+    let inputs = document.querySelectorAll("#answerBox input, #answerBox textarea");
+    let valid = false;
+    inputs.forEach(input => {
+      if((input.type === "radio" && input.checked) || (input.tagName==="TEXTAREA" && input.value.trim().length >= 10)) {
+        valid = true;
+      }
+    });
+    if(!valid) { alert("Answer too short. Minimum 10 words required (or select Yes/No)."); return; }
     currentQuestion++;
-    loadQuestion();
+    showQuestion();
   }
-
-  // Start questions after age/gender
-  document.querySelector("#page-5 button").addEventListener("click", () => {
-    nextPage();
-    loadQuestion();
-  });
 </script>
 
 </body>
